--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -17,6 +17,8 @@
   <body>
     <div><b>Style me via the external method!</b></div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button style="background-color:orange; font: size 18px;">Inline Method</button>
+    <button style="background-color: orange; font: size 18px">
+      Inline Method
+    </button>
   </body>
 </html>
